Fix collapse of html layout due to scrollbar

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -122,9 +122,10 @@ html[data-theme='system']{
     @include dark-theme-vars();
   }
 }
-
-html,
-body {
+html{
+  overflow-y: scroll;
+}
+html,body {
   background: var(--base-color1);
   color: var(--font-color4);
   word-break: break-word;
@@ -134,7 +135,6 @@ body {
   z-index: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, "Helvetica Neue",Arial, Helvetica Neue, Helvetica,Meiryo, sans-serif;
-
   // Remove .header's border only when mygames-edit-header shown
   &:has(*> .mygames-edit-header){
     @include sp {
@@ -147,12 +147,12 @@ body {
 }
 
 ::-webkit-scrollbar{
-  background: var(--base-color3);
+  background: var(--base-color2);
   border-left: 1px solid var(--base-color3);
 }
 ::-webkit-scrollbar-thumb{
-  background: var(--base-color1);
-  border-left: 1px solid var(--base-color3);
+  background: var(--base-color3);
+  border-left: 1px solid var(--base-color1);
   @include light{
     background: #d3d3d3;
   }
